# Automata

./: Automata.h  CMakeLists.txt  algo.cpp  algo.md  main.cpp  main_tests.cpp
